--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.53.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6"
   }
