--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
     "sass": "^1.53.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6"
   }
